--- a/package.json
+++ b/package.json
@@ -84,8 +84,9 @@
     "workbox-webpack-plugin": "5.1.4"
   },
   "scripts": {
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
+    "start": "node scripts/start.js dev",
+    "build:test": "node scripts/build.js dev",
+    "build:prod": "node scripts/build.js prod",
     "test": "node scripts/test.js",
     "server": "node server/index.js"
   },
