--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-loader": "8.1.0",
     "babel-plugin-named-asset-import": "^0.3.7",
     "babel-preset-react-app": "^10.0.0",
+    "bcryptjs": "^2.4.3",
     "bfj": "^7.0.2",
     "camelcase": "^6.1.0",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
@@ -42,9 +43,11 @@
     "jest-circus": "26.6.0",
     "jest-resolve": "26.6.0",
     "jest-watch-typeahead": "0.6.1",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.1",
     "koa-bodyparser": "^4.3.0",
     "koa-cors": "^0.0.16",
+    "koa-passport": "^4.1.4",
     "koa-router": "^10.0.0",
     "koa2-cors": "^2.0.6",
     "less": "^4.1.1",
@@ -52,6 +55,7 @@
     "mini-css-extract-plugin": "0.11.3",
     "mysql": "^2.18.1",
     "optimize-css-assets-webpack-plugin": "5.0.4",
+    "passport-jwt": "^4.0.0",
     "pnp-webpack-plugin": "1.6.4",
     "postcss-flexbugs-fixes": "4.2.1",
     "postcss-loader": "3.0.0",
